# cajon

./: .cajon.js  .cajon.lua  .gitignore  CMakeLists.txt  Cargo.toml  default.nix  license  main.cpp  main.hpp  overlay.nix  package-lock.json  package.json  package.nix  pnpm-lock.yaml  prettier.config.js  readme.md  shell.nix  tsconfig.json  types.d.ts
.github/workflows/: ci.yaml
src/: cajon_init.rs  container.ts  index.ts  init.rs  log.rs  log.ts  main.rs  profile.ts  subprocess.ts  tini.ts
