[package]
name = "cajon"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = [
  "derive",
] }
color-eyre = "0.6.5"
mlua = { version = "0.11.6", features = [
  "lua55",
  "serde",
  "send",
] }
serde = { version = "1.0.228", features = [
  "derive",
] }
serde_json = "1.0.149"
textwrap = "0.16.2"
